--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -89,12 +89,12 @@ Here we have also set where the package manager will place the installation of t
                         world-time-mode
                         perl-completion
                         polymode
+                        rust-mode
+                        flycheck-rust
                         ) "Default packages")
 #+end_src
 
 To ensure these packages are loaded lets define a couple of functions. One which ensures as single package is installed, the other which takes a list and handles any loading errors.
-
-elisp
 
 #+begin_src emacs-lisp
 (defun ensure-package-installed (package &optional min-version no-refresh)
@@ -126,6 +126,7 @@ Now we can ensure that our list of packages are installed:
 (setq package-enable-at-startup nil) ; Don't initialize later as well
 (package-initialize)
 (ensure-packages-installed init/packages)
+;;(package-initialize)
 #+end_src
 
 * General Editing
@@ -308,7 +309,7 @@ conventions, albeit on the windows keys:
 #+end_src
 ** Backups
 Centralise backups
-
+ 
 #+begin_src emacs-lisp
 (defconst use-backup-dir t)
 
@@ -330,7 +331,6 @@ Centralise backups
 
 #+end_src
 ** Emacs Shell
-
 #+begin_src emacs-lisp
 (eval-after-load "em-term"
   '(add-to-list 'eshell-visual-commands "git"))
@@ -373,20 +373,16 @@ We use the yasnippet templating engine to provide template, but this
 is provided through company mode to provide greater flexabilty, which
 provides other backends including finding words in the current buffer.
 
+The vesion of yas I have is autoloaded on the minor mode or global
+mode, so we'll load the tabled on the first time a mode uses the
+snippets.
 
 
 #+begin_src emacs-lisp
-
-(add-hook 'org-mode
-            (lambda ()
-              (company-mode)
-              (set (make-local-variable 'company-backends)
-                   '((company-dabbrev-code company-gtags company-etags company-keywords
-                      company-files company-dabbrev company-yasnippet)))))
+(setq yas-snippet-dirs '("~/.emacs.d/snippets"))
+(yas-global-mode 0)
+(yas-reload-all)
 #+end_src
-
-
-
 
 * Programming Lisps
 One of the reasons that I wanted to reconfigure my emacs settings this
@@ -521,7 +517,19 @@ Cider is the clojure mode of choice.
 #+begin_src emacs-lisp
 (add-to-list 'load-path (concat init/emacsd "/pde/lisp/"))
 (load "pde-load")
+(add-hook 'cperl-mode-hook #'yas-minor-mode)
 #+end_src
+
+* Rust
+Rust looks to be a promising language, with some quite innovative features.  Many say that it's up
+against Go as a more modern system language, but still suffers from breaking language changes. 
+
+#+begin_src emacs-lisp
+(add-to-list 'auto-mode-alist '("\\.rs\\'" . rust-mode))
+(add-hook 'flycheck-mode-hook #'flycheck-rust-setup)
+#+end_src
+
+I've yet to look at racer to improve the link to the rust documentation.
 
 * Haskell mode
 I've not used this haskell configuration much, it originates in a 10
@@ -551,7 +559,7 @@ setup period in the class.
       (cons '("\\.\\(xml\\|xsl\\|rng\\|html\\|xhtml\\)\\'" . nxml-mode)
       auto-mode-alist))
 
-(setq nxml-slash-auto-complete-flag t)
+;;(setq nxml-slash-auto-complete-flag t)
 ;;(let (
 ;;      (schema-dir (concat (config-get-module-dir "nxml") "schemas" ))
 ;;      )
@@ -610,15 +618,12 @@ This does not work as it attempts to give the buffer two major modes using indir
 #+begin_src emacs-lisp
 (setq org-default-notes-file (concat org-directory "/capture.org"))
 (define-key global-map "\C-cc" 'org-capture)
-(add-hook 'org-mode-hook
-          (lambda ()
-            (writegood-mode)))
 
-(setq org-capture-templates
-      '(("t" "Todo" entry (file+headline (concat org-directory "/gtd.org") "Tasks")
-         "* TODO %?\n  %i\n  %a")
-        ("j" "Journal" entry (file+datetree (concat org-directory "/journal.org"))
-         "* %?\nEntered on %U\n  %i\n  %a")))
+;;(setq org-capture-templates
+;;      '(("t" "Todo" entry (file+headline (concat org-directory "/gtd.org") "Tasks")
+;;         "* TODO %?\n  %i\n  %a")
+;;        ("j" "Journal" entry (file+datetree (concat org-directory "/journal.org"))
+;;         "* %?\nEntered on %U\n  %i\n  %a")))
 
 (setq org-todo-keywords
       '((sequence "TODO(t)" "|" "DONE(d)" "CANCELLED(c)")
@@ -710,11 +715,11 @@ This does not work as it attempts to give the buffer two major modes using indir
               ("OPEN"      :foreground "magenta"      :weight bold)
               ("CLOSED"    :foreground "forest green" :weight bold))))
 
-(setq org-agenda-files '( 
-(concat org-directory "/gtd.org") 
-(concat org-directory "/emacs.org") 
-(concat org-directory "/vs.org") 
-(concat org-directory "/tech.org")))
+;;(setq org-agenda-files '( 
+;;(concat org-directory "/gtd.org") 
+;;(concat org-directory "/emacs.org") 
+;;(concat org-directory "/vs.org") 
+;;(concat org-directory "/tech.org")))
 
 (setq org-stuck-projects '( "HOLD|SOMEDAY|+SCHEDULED<\"<today>\"" ( "DONE" "CLOSED" "CANCELLED") nil "" ))
 ;;(setq org-mobile-directory "~/Dropbox/MobileOrg/")
@@ -746,41 +751,6 @@ This does not work as it attempts to give the buffer two major modes using indir
 
 ;;(global-set-key [ (super z) ] 'org-remember)
 
-;;(setq org-remember-templates
-;;      '(
-;;		  ("Story" ?s "* TODO %^{Title}\n  %i\n%?\n  %a" "~/org/vs.org" "Project Stories")
-;;		  ("Todo" ?t "* TODO %?\n  %i\n  %a" "~/org/gtd.org" "Todo List")
-;;        ("Issue" ?i "* OPEN %U %a %?\n  %i\n" "~/org/vs.org" "Issues")
-;;		  ("Emacs" ?e "* TODO %U %?\n  %i\n" "~/org/emacs.org" "Configuration")
-;;		  ("Research" ?r "* OPEN %u %^{Title} %a\n  %?\n  %i\n" "~/org/tech.org" "To Look Into")
-;;		  ))
-
-
-;; (require 'org-publish)
-;; (setq org-publish-project-alist
-;;       '(
-
-;;         ("org-notes"
-;;          :base-directory "~/org/"
-;;          :base-extension "txt"
-;;          :publishing-directory "~/Dropbox/Public/orgpub/"
-;;          :recursive t
-;;          :publishing-function org-publish-org-to-html
-;;          :headline-levels 4       ; Just the default for this project.
-;;          :auto-preamble t
-;;          )
-
-;;         ("org-base"
-;;          :static-directory "~/org/"
-;;          :base-extension "css\\|js\\|png\\|jpg\\|gif\\|pdf\\|mp3\\|ogg\\|swf"
-;;          :publishing-directory "~/Dropbox/Public/orgpub/"
-;;          :recursive t
-;;          :publishing-function org-publish-attachment
-;;          )
-
-;;         ("org" :components ("org-notes" "org-static"))
-
-;;         ))
 
                                         ; Use IDO for target completion
 (setq org-completion-use-ido t)
@@ -829,11 +799,18 @@ This does not work as it attempts to give the buffer two major modes using indir
          "http://rss.slashdot.org/Slashdot/slashdot"
          "~/org/feeds.org" "Slashdot Entries")))
 
+
+
 (add-hook 'org-mode-hook
           (lambda ()
-            (org-set-local 'yas/trigger-key [tab])
-            (define-key yas/keymap [tab] 'yas/next-field-group)
+            (writegood-mode)
+            (company-mode)
+            (yas-minor-mode)
+            (set (make-local-variable 'company-backends)
+               '((company-dabbrev-code company-gtags company-etags company-keywords
+                  company-files company-dabbrev company-yasnippet)))
             ))
+
 
 (defvar org-journal-file "~/Documents/org/journal.org"  
   "Path to OrgMode journal file.")  
