--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -251,6 +251,7 @@ RET f.
 #+end_src
 
 ** Presentations
+*** For code in the editor
 Sometimes during presentations and we need to change the font. We can
 define some conventional keys for changing the font pitch:
 
@@ -259,6 +260,30 @@ define some conventional keys for changing the font pitch:
 (define-key global-map (kbd "C--") 'text-scale-decrease)
 #+end_src
 
+*** Producing Slides
+
+Org-mode does export to latex's beamer package to create slides.  This
+is configurable entirely from the file itself.  However here we set
+our preferred style.
+
+#+begin_src emacs-lisp 
+(setq org-beamer-theme "CambridgeUS")
+#+end_src
+
+At the moment I'm prefering the following presentation options.
+
+#+begin_example
+#+BEAMER_THEME: CambridgeUS
+#+BEAMER_COLOR_THEME: dove
+
+
+#+OPTIONS: H:2 toc:t
+
+#+SELECT_TAGS: export
+#+EXCLUDE_TAGS: noexport
+
+#+COLUMNS: %20ITEM %13BEAMER_env(Env) %6BEAMER_envargs(Args) %4BEAMER_col(Col) %7BEAMER_extra(Extra)        
+#+end_example
 
 ** Setting for the Mac
 
@@ -308,11 +333,12 @@ conventions, albeit on the windows keys:
 (load-theme 'zenburn t)
 #+end_src
 ** Backups
-Centralise backups
+I'd prefer not to place backups in the current directory when saving
+files.  Emacs provides a facility to place the backups of files edited
+and the autosave files in a different directory.  Here we're backing
+up and autosaving all files edited into a single backup directory.
  
 #+begin_src emacs-lisp
-(defconst use-backup-dir t)
-
 (defvar user-temporary-file-directory
   (concat init/emacsd "tmp/"))
 
@@ -331,12 +357,13 @@ Centralise backups
 
 #+end_src
 ** Emacs Shell
+It's possible to configure some commands in the emacs shell to produce
+their results in another buffer by setting ~eshell-visual-commands~. 
 #+begin_src emacs-lisp
 (eval-after-load "em-term"
-  '(add-to-list 'eshell-visual-commands "git"))
-
-(eval-after-load "em-term"
-  '(add-to-list 'eshell-visual-commands "ssh"))
+  '(progn
+     (add-to-list 'eshell-visual-subcommands '("git" "log" "diff" "show")
+     (add-to-list 'eshell-visual-commands "ssh"))))
 #+end_src
 
 ** World Time
@@ -391,7 +418,7 @@ community has driven some interesting development in the emacs
 community and is the most widely used editor in the community,
 although it now has stiff competition from both Cursive (Idea's plugin
 for clojure) and Lighttable. Emacs history support for lisp
-programming has been an advantage but there is a huge degree in the
+programming has been an advantage but there is a degree in the
 flexibility of support.  In other languages moving to emacs would
 sometimes mean sacificing some of the immedate feedback given by a
 more dedicated environment and the ability to apply semi-automatic
@@ -456,28 +483,28 @@ these errors would appear in the minibuffer obscuring other useful
 feeback from eldoc.
 
 ** Clojure: Cider Configuration
-Cider is the clojure mode of choice. 
+Cider is the clojure mode of choice. First we set up lein and our
+preferences for the REPL. 
 #+begin_src emacs-lisp
-(setq cider-lein-command "~/bin/lein")
+(setq cider-lein-command "~/bin/lein"
+      cider-repl-history-file (concat init/emacsd "/cider-history") 
+      cider-repl-use-pretty-printing t
+      cider-repl-use-clojure-font-lock t
+      cider-repl-result-prefix ";; => "
+      cider-repl-wrap-history t
+      cider-repl-history-size 3000)
 
-;; REPL history file
-(setq cider-repl-history-file (concat init/emacsd "/cider-history"))
+(add-hook 'cider-repl-mode-hook #'company-mode)
+#+end_src
 
-;; nice pretty printing
-(setq cider-repl-use-pretty-printing t)
+For editing we set up eldoc and configure completion. We are also
+electing to not show the error buffer when there is a cider-stack
+trace.  The error will be available in the background should we need
+to userstand what has happened.
 
-;; nicer font lock in REPL
-(setq cider-repl-use-clojure-font-lock t)
+Refactoring in enabled and bound to a key. 
 
-;; result prefix for the REPL
-(setq cider-repl-result-prefix ";; => ")
-
-;; never ending REPL history
-(setq cider-repl-wrap-history t)
-
-;; looong history
-(setq cider-repl-history-size 3000)
-
+#+begin_src emacs-lisp
 ;; eldoc for clojure
 (add-hook 'cider-mode-hook #'eldoc-mode)
 
@@ -486,7 +513,7 @@ Cider is the clojure mode of choice.
 (setq cider-show-error-buffer nil)
 
 ;; company mode for completion
-(add-hook 'cider-repl-mode-hook #'company-mode)
+
 (add-hook 'cider-mode-hook #'company-mode)
 
 (add-hook 'clojure-mode-hook
@@ -499,20 +526,29 @@ Cider is the clojure mode of choice.
 
 
 ;; no auto sort
-(setq cljr-auto-sort-ns nil)
-
-;; do not prefer prefixes when using clean-ns
-(setq cljr-favor-prefix-notation nil)
+(setq cljr-auto-sort-ns nil
+      cljr-favor-prefix-notation nil)
 
 #+end_src
 
 ** Autoinserting templates
+I find autoinserting useful as well as templates.  These insert intial
+content into the buffer when the file is new
 #+begin_src emacs-lisp
 (require 'autoinsert)
 (add-hook 'find-file-hook 'auto-insert)
 #+end_src
    
 * Perl Development
+
+Occasionally I still use perl for where bash doesn't cut it.  I've
+used it enough over the years for it to be useful for the odd bit of
+bit of generation, file manipulation or build scripting. This is quite
+close to it's original purpose for extracting and reporting over large
+datasets. It still seems good for the quick and ad-hoc. 
+
+CPerl is a pretty good ide for perl, it gives in edit feedback on
+where you have got to.
 
 #+begin_src emacs-lisp
 (add-to-list 'load-path (concat init/emacsd "/pde/lisp/"))
@@ -521,7 +557,7 @@ Cider is the clojure mode of choice.
 #+end_src
 
 * Rust
-Rust looks to be a promising language, with some quite innovative features.  Many say that it's up
+Rust looks to be a promising language, with some innovative features.  Many say that it's up
 against Go as a more modern system language, but still suffers from breaking language changes. 
 
 #+begin_src emacs-lisp
@@ -616,14 +652,20 @@ This does not work as it attempts to give the buffer two major modes using indir
 ** Capturing notes
 
 #+begin_src emacs-lisp
+
+(setq initial-buffer-choice (lambda ()
+     (org-agenda-list)
+     (get-buffer "*Org Agenda*")))    
+
 (setq org-default-notes-file (concat org-directory "/capture.org"))
 (define-key global-map "\C-cc" 'org-capture)
 
-;;(setq org-capture-templates
-;;      '(("t" "Todo" entry (file+headline (concat org-directory "/gtd.org") "Tasks")
-;;         "* TODO %?\n  %i\n  %a")
-;;        ("j" "Journal" entry (file+datetree (concat org-directory "/journal.org"))
-;;         "* %?\nEntered on %U\n  %i\n  %a")))
+(setq org-capture-templates
+      `(("t" "Todo" entry (file+headline ,(concat org-directory "/gtd.org") "Tasks")
+         "* TODO %?\n  %i\n  %a")
+        ("j" "Journal" entry (file+datetree ,(concat org-directory "/journal.org"))
+         "* %?\nEntered on %U\n  %i\n  %a")
+        ("b" "Bibtex Capture" entry (file ,(concat org-directory "/readingList.org")) "* READ %?\n\n%a\n\n%:author (%:year): %:title\n In %:journal, %:pages.")))
 
 (setq org-todo-keywords
       '((sequence "TODO(t)" "|" "DONE(d)" "CANCELLED(c)")
